--- a/index.html
+++ b/index.html
@@ -1,32 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FirstInstagram</title>
+    <title>BREATHCODE PHOTO FEED</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <div class="navbar">
-        <div class="navtext">
-
+    <div>
+        <header>
+            <div class="block">
+                <h1>Breathcode Photo Feed</h1>
+            </div>
+        </header>
+        <div class="block">
+            <div class="inblock">
+                <div class="div-heading">
+                    <div class="div-title">
+                        <h2 class="titleText">My First Photo</h2>
+                    </div>
+                    <div class="date">
+                        <span>12/15</span>
+                    </div>
+                </div>
+                <div>
+                    <img src="https://picsum.photos/600/445"></img>
+                </div>
+                <div>
+                    <p>Aliquam erat volutpat. Duis vestibulum ligula arcu, vitae vestibulum lectus vehicula eget.</p>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="image-box">
-        <div class="text-box">
-            <div class="top-text-left">
-
+        <br>
+        <div class="block">
+            <div class="inblock">
+                <div class="div-heading">
+                    <div class="div-title">
+                        <h2 class="titleText">My Second Photo</h2>
+                    </div>
+                    <div class="date">
+                        <span>12/21</span>
+                    </div>
+                </div>
+                <div>
+                    <img src="https://picsum.photos/600/445?random=1"></img>
+                </div>
+                <div>
+                    <p>Mauris volutpat accumsan urna quis semper. Duis a est et turpis cursus fermentum. Ut eu magna eu risus lacinia sodales</p>
+                </div>
             </div>
-            <div class="top-text-right">
-                
+        </div>
+        <div class="block">
+            <div class="inblock">
+                <div class="div-heading">
+                    <div class="div-title">
+                        <h2 class="titleText">My third Photo</h2>
+                    </div>
+                    <div class="date">
+                        <span>12/18</span>
+                    </div>
+                </div>
+                <div>
+                    <img src="https://picsum.photos/600/445?random=2"></img>
+                </div>
+                <div>
+                    <p>Integer quis mauris in nisl luctus sollicitudin viverra sed nunc. Ut semper enim eget felis hendrerit, tempus accumsan massa imperdiet. Curabitur eu mi massa.</p>
+                </div>
             </div>
-            <div class="image">
-
-            </div>
-            <div class="bottom-text">
-
+        </div>
+        <div class="block">
+            <div class="inblock">
+                <div class="div-heading">
+                    <div class="div-title">
+                        <h2 class="titleText">My Fourth Photo</h2>
+                    </div>
+                    <div class="date">
+                        <span>11/12</span>
+                    </div>
+                </div>
+                <div>
+                    <img src="https://picsum.photos/600/445?random=3"></img>
+                </div>
+                <div>
+                    <p>Etiam iaculis, risus vitae imperdiet varius, justo ligula congue arcu, vitae faucibus felis nulla at metus.</p>
+                </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
